Bug 1454628 - fixed compilation with --disable-accessibility builds; r=aklotz

This was broken by bug 1453979.

MozReview-Commit-ID: JtJqICb2vBP